style.css
@import url('https://googleapis.com');

body {
    font-family: 'Roboto', sans-serif;
    display: flex;
    margin: 0;
    flex-direction: column;
}

/*header*/

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 90px;
    background-color: #1F2937;
    color: #F9FAF8;
    flex: 1;
}

a {
    color: #E5E7EB;
    text-decoration: none;
}

.links {
    display: flex;
    gap: 20px;
}

/*hero*/

.hero {
    display: flex;
    height: 300px;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    padding-bottom: 90px;
}

.hero-content {
    justify-content: space-around;
    display: flex;
    margin: 0 90px;
    gap: 20px;
    flex: 1;
}

.hero-left {
    max-width: 600px;
    width: 400px;
    height: 250px;
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: space-around;
    padding: 0;
}

.image {
    display: flex;
    flex: 0 0 auto;
    height: 250px;
    width: 400px;
    background-color: lightgray;
    justify-content: center;
    align-items: center;
    color: #F9FAF8;
}

.hero .main-title {
    font-size: 48px;
    margin: 0;
    font-weight: 900;
    color: #F9FAF8;
}

.hero .subtext {
    margin: 0;
    color: #E5E7EB;
    font-size: 18px;
}

.hero-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 5px;
}

.subtext-container {
    padding-right: 90px;
}

.button {
    background-color: #3882f6;
    color: #F9FAF8;
    font-weight: 800;
    width: 90px;
    height: 30px;
    border-radius: 10px;
    border: 0;
    cursor: pointer;
    margin-top: 20px;
}

